agent9527-rs/tui/src/status/snapshots/agent9527_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  ⣰⣭⣆ Agent9527 (v20260727.1.0)                                               │
│                                                                              │
│ Visit https://chatgpt.com/settings/usage for up-to-date information on rate  │
│ limits and credits                                                           │
│                                                                              │
│  Model:            gpt-5.1-agent9527-max (reasoning high, summaries detailed │
│  Directory: [[workspace]]                                                    │
│  Permissions:      Workspace (Ask for approval)                              │
│  Agents.md:        <none>                                                    │
│                                                                              │
│  Token usage:      1.9K total  (1K input + 900 output)                       │
│  Context window:   100% left (2.25K used / 272K)                             │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)            │
│  Weekly limit:     [███████████░░░░░░░░░] 55% left (resets 03:24)            │
╰──────────────────────────────────────────────────────────────────────────────╯
