agent9527-rs/tui/src/status/snapshots/agent9527_tui__status__tests__status_snapshot_shows_active_user_defined_profile.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  ⣰⣭⣆ Agent9527 (v20260727.4.0)                                              │
│                                                                             │
│ Visit https://chatgpt.com/settings/usage for up-to-date information on rate │
│ limits and credits                                                          │
│                                                                             │
│  Model:            gpt-5.1-agent9527-max (reasoning none, summaries auto)   │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Profile locked (read-only, Ask for approval)             │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      0 total  (0 input + 0 output)                            │
│  Context window:   100% left (0 used / 272K)                                │
│  Limits:           data not available yet                                   │
╰─────────────────────────────────────────────────────────────────────────────╯
